refactor: User/Product 응답 DTO 변환을 from 메서드로 통일